--- a/force-app/main/default/aura/ResourceDashboardCard/ResourceDashboardCard.css
+++ b/force-app/main/default/aura/ResourceDashboardCard/ResourceDashboardCard.css
@@ -1,12 +1,10 @@
 .THIS.resource-card {
-	width: 100%;
-	max-height: 100%;
+	min-height: 100%;
 	min-width: 100%;
 	position: relative;
 }
 
 .THIS .resource-card-title {
-	height: 27px;
 	color: #000000;
 	font-family: "Proxima Nova";
 	font-size: 16px;
@@ -24,7 +22,6 @@
 	line-height: 20px;
 	text-align: center;
 	background-color: rgba(216, 216, 216, 0.25);
-	height: 20px;
 	cursor: pointer;
 }
 
