change Resource layouts

--- a/force-app/main/default/layouts/Resource__c-Article.layout-meta.xml
+++ b/force-app/main/default/layouts/Resource__c-Article.layout-meta.xml
@@ -26,10 +26,6 @@
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
-                <behavior>Required</behavior>
-                <field>Content_Type__c</field>
-            </layoutItems>
-            <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Content_Class__c</field>
             </layoutItems>
@@ -213,7 +209,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0E000001GSYF</masterLabel>
+        <masterLabel>00h9E000000qQ3A</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
