--- a/force-app/main/default/layouts/Resource__c-Video.layout-meta.xml
+++ b/force-app/main/default/layouts/Resource__c-Video.layout-meta.xml
@@ -26,7 +26,7 @@
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Edit</behavior>
                 <field>Content_Type__c</field>
             </layoutItems>
             <layoutItems>
@@ -217,7 +217,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h9E000000mjXY</masterLabel>
+        <masterLabel>00h9E000000qQ4L</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
