--- a/force-app/main/default/layouts/Lead-Lead Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Lead-Lead Layout.layout-meta.xml
@@ -62,6 +62,10 @@
                 <behavior>Edit</behavior>
                 <field>Org_ID__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Invited_by_PI__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -415,11 +419,6 @@
     <relatedContent>
         <relatedContentItems>
             <layoutItem>
-                <component>wits:newsPanel</component>
-            </layoutItem>
-        </relatedContentItems>
-        <relatedContentItems>
-            <layoutItem>
                 <behavior>Readonly</behavior>
                 <field>CampaignId</field>
             </layoutItem>
@@ -432,9 +431,6 @@
     </relatedContent>
     <relatedLists>
         <relatedList>RelatedFileList</relatedList>
-    </relatedLists>
-    <relatedLists>
-        <relatedList>RelatedContentNoteList</relatedList>
     </relatedLists>
     <relatedLists>
         <fields>TASK.SUBJECT</fields>
