--- a/force-app/main/default/aura/ShareModal/ShareModal.cmp
+++ b/force-app/main/default/aura/ShareModal/ShareModal.cmp
@@ -5,6 +5,8 @@
     <!-- attributes: -->
     <aura:attribute name="whatId" type="String"/>
     <aura:attribute name="fromId" type="String"/>
+    <aura:attribute name="emailType" type="String" access="public"/>
+    <aura:attribute name="needRefresh" type="Boolean" default="true"/>
     <aura:attribute name="parent" type="Aura.Component" required="true"/>
     <aura:attribute name="targetEmail" type="String"/>
     <aura:attribute name="modalDialogBody" type="String" default="{!$Label.c.PG_SHR_Body}"/>
