--- a/force-app/main/default/aura/TasksTab/TasksTab.cmp
+++ b/force-app/main/default/aura/TasksTab/TasksTab.cmp
@@ -28,7 +28,7 @@
                         <tr>
                             <th>{!$Label.c.Task_Tab_Table_Col_Name}</th>
                             <th class="priority">{!$Label.c.Originator}</th>
-                            <th class="completed-by">{!$Label.c.Due_date}</th>
+                            <th class="completed-by">{!$Label.c.Complete_By_Date}</th>
                             <th class="completed-by">{!$Label.c.Reminder_Date}</th>
                             <th></th>
                         </tr>
