--- a/force-app/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
@@ -59,6 +59,10 @@
                 <behavior>Edit</behavior>
                 <field>Middle_Name__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Phone_Type__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
