--- a/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
+++ b/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
@@ -13,7 +13,7 @@
     <aura:attribute name="ss" type="Study_Site__c"/>
     <aura:attribute name="participant" type="Participant__c"/>
     <aura:attribute name="pe" type="Participant_Enrollment__c"/>
-    <aura:attribute name="today" type="Date"/>
+    <aura:attribute name="todayDate" type="Date"/>
     <aura:attribute name="isAllRequiredCompleted" type="Boolean" default="false"/>
     <aura:attribute name="initialized" type="Boolean" default="false"/>
 
